--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -159,7 +159,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        MENU                       
+        <span class="glyphicon glyphicon-menu-hamburger"></span>                       
       </button>
       <a class="navbar-brand" href="#myPage">Logo</a>
     </div>
