--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -231,7 +231,7 @@
 </div>
 
 <!-- Container (The Band Section) -->
-<div id="band" class="container text-center">
+<div id="band" class="container text-center" role="navigation">
   <h3>THE BAND</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum dolor sit 
@@ -283,7 +283,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (TOUR Section) -->
-<div id="tour" class="bg-1">
+<div id="tour" class="bg-1" role="navigation">
   <div class="container">
     <h3 class="text-center">TOUR DATES</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!<br><br></p>
@@ -358,7 +358,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (Contact Section) -->
-<div id="contact" class="container">
+<div id="contact" class="container" role="navigation">
   <h3 class="text-center">Contact</h3>
   <p class="text-center"><em>We love our fans!</em></p>
 
