--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -155,7 +155,7 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<nav role="navigation" class="navbar navbar-default navbar-fixed-top" aria-labelledby="mainnavheading">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -184,7 +184,7 @@
   </div>
 </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel"  role="navigation" aria-labelledby="carouselnavheading">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class=""></li>
@@ -231,7 +231,7 @@
 </div>
 
 <!-- Container (The Band Section) -->
-<div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
+<div id="band" class="container text-center">
   <h3>THE BAND</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum dolor sit 
@@ -283,7 +283,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (TOUR Section) -->
-<div id="tour" class="bg-1" role="navigation" aria-labelledby="tournavheading">
+<div id="tour" class="bg-1">
   <div class="container">
     <h3 class="text-center">TOUR DATES</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!<br><br></p>
@@ -358,7 +358,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (Contact Section) -->
-<div id="contact" class="container" role="navigation" aria-labelledby="contactnavheading">
+<div id="contact" class="container">
   <h3 class="text-center">Contact</h3>
   <p class="text-center"><em>We love our fans!</em></p>
 
