--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -184,9 +184,9 @@
   </div>
 </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel"  role="navigation" aria-labelledby="myCarousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel"  role="navigation" aria-labelledby="carouselnavheading">
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+    <ol id="carouselnavheading" class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class=""></li>
       <li data-target="#myCarousel" data-slide-to="1" class=""></li>
       <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
@@ -231,8 +231,8 @@
 </div>
 
 <!-- Container (The Band Section) -->
-<div id="band" class="container text-center" role="navigation" aria-labelledby="band">
-  <h3>THE BAND</h3>
+<div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
+  <h3 id="bandnavheading">THE BAND</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
@@ -283,8 +283,8 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (TOUR Section) -->
-<div id="tour" class="bg-1" role="navigation" aria-labelledby="tour">
-  <div class="container">
+<div id="tour" class="bg-1" role="navigation" aria-labelledby="tournavheading">
+  <div id="tournavheading" class="container">
     <h3 class="text-center">TOUR DATES</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!<br><br></p>
     <ul class="list-group">
@@ -358,8 +358,8 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <!-- Container (Contact Section) -->
-<div id="contact" class="container" role="navigation" aria-labelledby="contact">
-  <h3 class="text-center">Contact</h3>
+<div id="contact" class="container" role="navigation" aria-labelledby="contactnavheading">
+  <h3 id="contactnavheading" class="text-center">Contact</h3>
   <p class="text-center"><em>We love our fans!</em></p>
 
   <div class="row">
