--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -155,8 +155,8 @@
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<nav aria-label="Site menu" class="navbar navbar-default navbar-fixed-top" aria-labelledby="mainnavheading">
-  <div class="container-fluid">
+<nav class="navbar navbar-default navbar-fixed-top" aria-labelledby="mainnavheading">
+  <div id="mainnavheading" class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="glyphicon glyphicon-menu-hamburger"></span>                       
