--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -178,7 +178,7 @@
             <li><a href="#">Media</a></li> 
           </ul>
         </li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+        <li><a href="#">Search</a></li>
       </ul>
     </div>
   </div>
