--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -234,7 +234,7 @@
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
   <h3 id="bandnavheading">THE BAND</h3>
   <p class="text-dark">We love music!</p>
-  <p>We have created a fictional band website. Lorem ipsum dolor sit 
+  <p class="text-dark">We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
