--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -233,7 +233,7 @@
 <!-- Container (The Band Section) -->
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
   <h3 id="bandnavheading">THE BAND</h3>
-  <p class="text-dark">We love music!</p>
+  We love music!
   <p class="text-dark">We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
