--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -234,7 +234,7 @@
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
   <h3 id="bandnavheading">THE BAND</h3>
   We love music!
-  <p class="text-dark">We have created a fictional band website. Lorem ipsum dolor sit 
+  We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
 labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -243,7 +243,7 @@ dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum 
 consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   <br>
   <div class="row">
     <div class="col-sm-4">
