--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -296,7 +296,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     <div class="row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="Bootstrap%20Theme%20The%20Band_files/paris.jpg" alt="Paris" width="400" height="300">
+          <img src="Bootstrap%20Theme%20The%20Band_files/paris.jpg" alt="this is brazil" width="400" height="300">
           <p><strong>Paris</strong></p>
           <p>Friday 27 November 2015</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
