--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-<div class="jumbotron text-center">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+<div class="jumbotron">
+  <h1>WCAG Example</h1>
+  <p>Web Content Accessibility Guidelines (WCAG)</p> 
 </div>
   
 <div class="container my-5 py-5">
