--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron text-center">
   <h1>WCAG Example</h1>
   <p>Web Content Accessibility Guidelines (WCAG)</p> 
 </div>
   
-<div class="container my-5 py-5">
+<div class="container py-5">
   <div class="row">
     <div class="col-lg-12">
         <table class="table">
