--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Before WCAG</th>
+                <th scope="col">WCAGed</th>
               </tr>
             </thead>
             <tbody>
