--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -19,7 +19,7 @@
     margin: 10px 0 30px 0;
     letter-spacing: 10px;      
     font-size: 20px;
-    color: #111;
+    color: #000;
   }
   .container {
     padding: 80px 120px;
@@ -232,7 +232,7 @@
 
 <!-- Container (The Band Section) -->
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
-  <h3 id="bandnavheading">THE BAND</h3>
+  <h3 class="" id="bandnavheading">THE BAND</h3>
   We love music!
   We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
