--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -151,6 +151,9 @@
   textarea {
     resize: none;
   }
+  p{
+    color: #000;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -233,6 +236,7 @@
 <!-- Container (The Band Section) -->
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
   <h3 class="" id="bandnavheading">THE BAND</h3>
+  <p>
   We love music!
   We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
@@ -245,6 +249,7 @@ consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   <br>
+</p>
   <div class="row">
     <div class="col-sm-4">
       <p class="text-center"><strong>Name</strong></p><br>
