--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -40,6 +40,9 @@
     width: 100%; /* Set width to 100% */
     margin: auto;
   }
+  .carousel-caption{
+    background-color: #000;
+  }
   .carousel-caption h3 {
     color: #fff !important;
   }
