--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -203,24 +203,24 @@
       <div class="item">
         <img src="Bootstrap%20Theme%20The%20Band_files/ny.jpg" alt="New York" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>New York</h3>
-          <p>The atmosphere in New York is lorem ipsum.</p>
+          <h3 class="text-white">New York</h3>
+          <p class="text-white">The atmosphere in New York is lorem ipsum.</p>
         </div>      
       </div>
 
       <div class="item">
         <img src="Bootstrap%20Theme%20The%20Band_files/chicago.jpg" alt="Chicago" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3 class="text-white">Chicago</h3>
+          <p> class="text-white"Thank you, Chicago - A night we won't forget.</p>
         </div>      
       </div>
     
       <div class="item active">
         <img src="Bootstrap%20Theme%20The%20Band_files/la.jpg" alt="Los Angeles" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+          <h3 class="text-white">LA</h3>
+          <p class="text-white">Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
         </div>      
       </div>
     </div>
