--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -154,6 +154,9 @@
   textarea {
     resize: none;
   }
+  p{
+    color: #000;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
