--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -239,7 +239,7 @@
 <!-- Container (The Band Section) -->
 <div id="band" class="container text-center" role="navigation" aria-labelledby="bandnavheading">
   <h3 class="" id="bandnavheading">THE BAND</h3>
-  <p>
+  <p class="text-black">
   We love music!
   We have created a fictional band website. Lorem ipsum dolor sit 
 amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
