--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -255,7 +255,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 </p>
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center text-black"><strong>Name</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="Bootstrap%20Theme%20The%20Band_files/bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
@@ -266,7 +266,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center  text-black"><strong>Name</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
         <img src="Bootstrap%20Theme%20The%20Band_files/bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
