--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -296,9 +296,9 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     <h3 class="text-center">TOUR DATES</h3>
     <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!<br><br></p>
     <ul class="list-group">
-      <li class="list-group-item text-black">September <span class="badge badge-dark">Sold Out!</span></li>
-      <li class="list-group-item  text-black">October <span class="badge badge-dark">Sold Out!</span></li> 
-      <li class="list-group-item  text-black">November <span class="badge">3</span></li> 
+      <li class="list-group-item text-black">September <span class="badge badge-pill badge-dark">Sold Out!</span></li>
+      <li class="list-group-item  text-black">October <span class="badge badge-pill badge-dark">Sold Out!</span></li> 
+      <li class="list-group-item  text-black">November <span class="badge badge-pill badge-dark">3</span></li> 
     </ul>
     
     <div class="row text-center">
