--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -320,7 +320,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="Bootstrap%20Theme%20The%20Band_files/sanfran.jpg" alt="San Francisco" width="400" height="300">
+          <img src="Bootstrap%20Theme%20The%20Band_files/sanfran.jpg" alt="save me San Francisco" width="400" height="300">
           <p><strong>San Francisco</strong></p>
           <p>Sunday 29 November 2015</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
