--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -368,14 +368,14 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 <!-- Container (Contact Section) -->
 <div id="contact" class="container" role="navigation" aria-labelledby="contactnavheading">
   <h3 id="contactnavheading" class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
+  <p class="text-center text-black"><em>We love our fans!</em></p>
 
   <div class="row">
     <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+      <p class="text-black">Fan? Drop a note.</p>
+      <p  class="text-black"><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
+      <p  class="text-black"><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
+      <p  class="text-black"><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
