--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -380,7 +380,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     <div class="col-md-8">
       <div class="row">
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
+          <input id="nameform" aria-labelledby="nameformlabel" class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
         </div>
         <div class="col-sm-6 form-group">
           <input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
