--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -379,7 +379,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
     <div class="col-md-8">
       <div class="row">
-        <div class="col-sm-6 form-group">
+        <div id="nameformlabel" class="col-sm-6 form-group">
           <input id="nameform" aria-labelledby="nameformlabel" class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
         </div>
         <div class="col-sm-6 form-group">
