--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -377,16 +377,16 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
       <p  class="text-black"><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
       <p  class="text-black"><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
     </div>
-    <div class="col-md-8">
+    <div id="commentsformlabel" class="col-md-8">
       <div class="row">
         <div id="nameformlabel" class="col-sm-6 form-group">
           <input id="nameform" aria-labelledby="nameformlabel" class="form-control" id="name" name="name" placeholder="Name" type="text" required="">
         </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required="">
+        <div id="emailformlabel" class="col-sm-6 form-group">
+          <input class="form-control" aria-labelledby="emailformlabel" id="email" name="email" placeholder="Email" type="email" required="">
         </div>
       </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+      <textarea class="form-control" id="comments" aria-labelledby="commentsformlabel" name="comments" placeholder="Comment" rows="5"></textarea>
       <br>
       <div class="row">
         <div class="col-md-12 form-group">
