--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -425,7 +425,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 <!-- Footer -->
 <footer class="text-center">
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="" data-original-title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
+    Back to Top
   </a><br><br>
   <p>Bootstrap Theme Made By <a href="https://www.w3schools.com/" data-toggle="tooltip" title="" data-original-title="Visit w3schools">www.w3schools.com</a></p> 
 </footer>
