--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -398,9 +398,9 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   <br>
   <h3 class="text-center">From The Blog</h3>  
   <ul class="nav nav-tabs">
-    <li class="active"><a data-toggle="tab" href="#home">Mike</a></li>
-    <li><a data-toggle="tab" href="#menu1">Chandler</a></li>
-    <li><a data-toggle="tab" href="#menu2">Peter</a></li>
+    <li class="active"><a class="text-dark" data-toggle="tab" href="#home">Mike</a></li>
+    <li><a class="text-dark" data-toggle="tab" href="#menu1">Chandler</a></li>
+    <li><a class="text-dark" data-toggle="tab" href="#menu2">Peter</a></li>
   </ul>
 
   <div class="tab-content">
