--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -157,6 +157,12 @@
   .text-black{
     color: #000;
   }
+  .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover{
+    color: #000;
+  }
+  .nav-tabs li a{
+    color: #000;
+  }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
