--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -412,15 +412,15 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h2>Mike Ross, Manager</h2>
-      <p>Man, we've been on the road for some time now. Looking forward to lorem ipsum.</p>
+      <p class="text-black">Man, we've been on the road for some time now. Looking forward to lorem ipsum.</p>
     </div>
     <div id="menu1" class="tab-pane fade">
       <h2>Chandler Bing, Guitarist</h2>
-      <p>Always a pleasure people! Hope you enjoyed it as much as I did. Could I BE.. any more pleased?</p>
+      <p class="text-black">Always a pleasure people! Hope you enjoyed it as much as I did. Could I BE.. any more pleased?</p>
     </div>
     <div id="menu2" class="tab-pane fade">
       <h2>Peter Griffin, Bass player</h2>
-      <p>I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
+      <p class="text-black">I mean, sometimes I enjoy the show, but other times I enjoy other things.</p>
     </div>
   </div>
 </div>
