--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -426,7 +426,7 @@ exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 </div>
 
 <!-- Image of location/map -->
-<img src="Bootstrap%20Theme%20The%20Band_files/map.jpg" class="img-responsive" style="width:100%">
+<img alt="Map of the band" src="Bootstrap%20Theme%20The%20Band_files/map.jpg" class="img-responsive" style="width:100%">
 
 <!-- Footer -->
 <footer class="text-center">
