--- a/index.html
+++ b/index.html
@@ -18,30 +18,18 @@
   
 <div class="container py-5">
   <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-12 text-center">
         <table class="table">
             <thead>
               <tr>
-                <th scope="col">#</th>
                 <th scope="col">Before WCAG</th>
                 <th scope="col">WCAGed</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
+                <td>https://wcag-hanan.netlify.app/bootstrap-band-before/</td>
+                <td>https://wcag-hanan.netlify.app/bootstrap-band/</td>
               </tr>
             </tbody>
           </table>
