--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </thead>
             <tbody>
               <tr>
-                <td>https://wcag-hanan.netlify.app/bootstrap-band-before/</td>
-                <td>https://wcag-hanan.netlify.app/bootstrap-band/</td>
+                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band-before/"></a>https://wcag-hanan.netlify.app/bootstrap-band-before/</td>
+                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band/"></a>https://wcag-hanan.netlify.app/bootstrap-band/</td>
               </tr>
             </tbody>
           </table>
