--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band-before/"></a>https://wcag-hanan.netlify.app/bootstrap-band-before/</td>
-                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band/"></a>https://wcag-hanan.netlify.app/bootstrap-band/</td>
+                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band-before/">https://wcag-hanan.netlify.app/bootstrap-band-before/</a></td>
+                <td><a href="https://wcag-hanan.netlify.app/bootstrap-band/">https://wcag-hanan.netlify.app/bootstrap-band/</a></td>
               </tr>
             </tbody>
           </table>
