--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="jumbotron text-center">
   <h1>WCAG Example</h1>
-  <p>Web Content Accessibility Guidelines (WCAG)</p> 
+  <p>Web Content Accessibility Guidelines Example</p> 
 </div>
   
 <div class="container py-5">
