--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="row">
     <div class="col-lg-12 text-center">
         <table class="table">
-            <thead>
+            <thead class="thead-light">
               <tr>
                 <th scope="col">Before WCAG</th>
                 <th scope="col">WCAGed</th>
