--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -462,7 +462,7 @@ $(document).ready(function(){
     });
   });
 })
-
+import { Accessibility } from 'accessibility/src/main';
 window.addEventListener('load', function() { new Accessibility(); }, false);
 </script>
 
