--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -462,6 +462,8 @@ $(document).ready(function(){
     });
   });
 })
+import { Accessibility } from 'accessibility/src/main';
+window.addEventListener('load', function() { new Accessibility(); }, false);
 </script>
 
 
