--- a/bootstrap-band/index.htm
+++ b/bootstrap-band/index.htm
@@ -460,10 +460,10 @@ $(document).ready(function(){
       window.location.hash = hash;
     });
   });
-  import { Accessibility } from 'accessibility/src/main';
-window.addEventListener('load', function() { new Accessibility(); }, false);
 })
 </script>
+
+<script type="text/javascript" src="Bootstrap%20Theme%20The%20Band_files/app.js"></script>
 <script type="text/javascript" src="node_modules/accessibility/dist/accessibility.min.js"></script>
 
 
